--- a/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
+++ b/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
@@ -17,11 +17,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="405" height="238"/>
+            <rect key="frame" x="0.0" y="0.0" width="405" height="257"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0ez-nk-c3q">
-                    <rect key="frame" x="18" y="200" width="87" height="17"/>
+                    <rect key="frame" x="18" y="219" width="87" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CSS:" id="9I3-I7-HLu">
                         <font key="font" metaFont="system"/>
@@ -30,7 +30,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Sy-7mr">
-                    <rect key="frame" x="109" y="195" width="157" height="26"/>
+                    <rect key="frame" x="109" y="214" width="157" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="DYB-rZ-iFG" id="9Mg-zg-Kvi">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -48,7 +48,7 @@
                     </connections>
                 </popUpButton>
                 <segmentedControl horizontalHuggingPriority="300" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IJe-cc-YKn">
-                    <rect key="frame" x="269" y="196" width="118" height="24"/>
+                    <rect key="frame" x="269" y="215" width="118" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <segmentedCell key="cell" alignment="left" style="rounded" trackingMode="momentary" id="0rH-I9-Dxr">
                         <font key="font" metaFont="smallSystem"/>
@@ -85,7 +85,7 @@
                     </connections>
                 </pathControl>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="5mI-gS-xH9">
-                    <rect key="frame" x="109" y="114" width="278" height="18"/>
+                    <rect key="frame" x="109" y="133" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="TeX-like math syntax" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="6vg-3f-KWk">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -96,7 +96,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="Zna-RM-nBO">
-                    <rect key="frame" x="109" y="162" width="278" height="18"/>
+                    <rect key="frame" x="109" y="181" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Syntax highlighting in code blocks" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="BuQ-02-oQB">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -107,7 +107,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HzY-ws-XRq">
-                    <rect key="frame" x="127" y="74" width="260" height="14"/>
+                    <rect key="frame" x="127" y="93" width="260" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Math support requires Internet connection." id="5Ch-dG-juL">
                         <font key="font" metaFont="smallSystem"/>
@@ -116,7 +116,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2I4-c8-jan">
-                    <rect key="frame" x="186" y="135" width="202" height="22"/>
+                    <rect key="frame" x="186" y="154" width="202" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="dvX-w7-kuE">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -129,7 +129,7 @@
                     </connections>
                 </popUpButton>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dd4-T9-cLi">
-                    <rect key="frame" x="127" y="140" width="56" height="14"/>
+                    <rect key="frame" x="127" y="159" width="56" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="52" id="Trd-jx-pmE"/>
@@ -141,7 +141,7 @@
                     </textFieldCell>
                 </textField>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="u5h-MS-cR3">
-                    <rect key="frame" x="126" y="93" width="261" height="18"/>
+                    <rect key="frame" x="126" y="112" width="261" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Use dollar sign ($) as inline delimiter" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="GF9-Dm-IoB">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -153,7 +153,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="P7Z-ag-nPR">
-                    <rect key="frame" x="109" y="50" width="278" height="18"/>
+                    <rect key="frame" x="109" y="69" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Task list syntax" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="kBf-iW-HlH">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -163,6 +163,17 @@
                         <binding destination="-2" name="value" keyPath="self.preferences.htmlTaskList" id="HnE-V1-mJS"/>
                     </connections>
                 </button>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="lxX-Pm-dhn">
+                    <rect key="frame" x="109" y="49" width="278" height="18"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="check" title="Translate newlines to &lt;br> tags" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Sty-qG-J6K">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <binding destination="-2" name="value" keyPath="self.preferences.htmlHardWrap" id="sGz-hW-fNw"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="2I4-c8-jan" firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" id="4VK-KY-tAn"/>
@@ -170,7 +181,9 @@
                 <constraint firstItem="u5h-MS-cR3" firstAttribute="top" secondItem="5mI-gS-xH9" secondAttribute="bottom" constant="8" id="9Ba-Ui-HgP"/>
                 <constraint firstItem="5mI-gS-xH9" firstAttribute="trailing" secondItem="u5h-MS-cR3" secondAttribute="trailing" id="AWd-pf-VlH"/>
                 <constraint firstAttribute="bottom" secondItem="f62-wu-Z6p" secondAttribute="bottom" constant="20" id="Br9-WO-eJN"/>
+                <constraint firstItem="Zna-RM-nBO" firstAttribute="leading" secondItem="lxX-Pm-dhn" secondAttribute="leading" id="CJg-gC-Tc9"/>
                 <constraint firstItem="5mI-gS-xH9" firstAttribute="top" secondItem="2I4-c8-jan" secondAttribute="bottom" constant="8" id="CLN-3m-mst"/>
+                <constraint firstItem="lxX-Pm-dhn" firstAttribute="top" secondItem="P7Z-ag-nPR" secondAttribute="bottom" constant="6" id="DVU-pg-OfD"/>
                 <constraint firstItem="Zna-RM-nBO" firstAttribute="leading" secondItem="5mI-gS-xH9" secondAttribute="leading" id="Hne-bE-ZOU"/>
                 <constraint firstItem="2I4-c8-jan" firstAttribute="top" secondItem="Zna-RM-nBO" secondAttribute="bottom" constant="8" id="JCt-zH-DPb"/>
                 <constraint firstItem="Dd4-T9-cLi" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" constant="18" id="KRr-S2-xD0"/>
@@ -198,6 +211,7 @@
                 <constraint firstItem="P7Z-ag-nPR" firstAttribute="top" secondItem="HzY-ws-XRq" secondAttribute="bottom" constant="8" id="tsK-st-L5Y"/>
                 <constraint firstItem="P7Z-ag-nPR" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" id="u7s-1X-JUf"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="ucH-qv-lLz"/>
+                <constraint firstItem="Zna-RM-nBO" firstAttribute="trailing" secondItem="lxX-Pm-dhn" secondAttribute="trailing" id="uyV-Q1-Qo7"/>
                 <constraint firstItem="HzY-ws-XRq" firstAttribute="top" secondItem="u5h-MS-cR3" secondAttribute="bottom" constant="8" id="xuL-FG-B7V"/>
             </constraints>
         </customView>
