--- a/MacDown/Localization/Base.lproj/MPDocument.xib
+++ b/MacDown/Localization/Base.lproj/MPDocument.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="14A283o" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
@@ -9,6 +9,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MPDocument">
             <connections>
                 <outlet property="editor" destination="VLv-r5-dZU" id="D9p-hw-Xin"/>
+                <outlet property="editorPaddingBottom" destination="iWt-0N-ePd" id="wxP-ap-5qc"/>
                 <outlet property="preview" destination="XJO-AS-uPd" id="0ZO-ec-vWJ"/>
                 <outlet property="splitView" destination="0kv-p9-H4b" id="1EO-mS-VKN"/>
                 <outlet property="window" destination="xOd-HO-29H" id="JIz-fz-R2o"/>
@@ -22,7 +23,7 @@
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="0.0" y="300" width="1024" height="578"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <value key="minSize" type="size" width="94" height="86"/>
             <view key="contentView" id="gIp-Ho-8D9">
                 <rect key="frame" x="0.0" y="0.0" width="1024" height="578"/>
@@ -69,11 +70,11 @@
                                         </scroller>
                                     </scrollView>
                                     <popUpButton appearanceType="aqua" translatesAutoresizingMaskIntoConstraints="NO" id="kfG-Fe-ode">
-                                        <rect key="frame" x="163" y="12" width="184" height="31"/>
+                                        <rect key="frame" x="163" y="2" width="184" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="mHu-Un-sUm"/>
-                                            <constraint firstAttribute="height" constant="26" id="oA6-sw-Vyh"/>
+                                            <constraint firstAttribute="height" constant="25" id="oA6-sw-Vyh"/>
                                         </constraints>
                                         <popUpButtonCell key="cell" type="bevel" title="0 words" bezelStyle="regularSquare" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" autoenablesItems="NO" altersStateOfSelectedItem="NO" selectedItem="nSU-MQ-L9d" id="KoL-wy-QnY">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -92,10 +93,10 @@
                                     </popUpButton>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="5HT-Up-YAd" secondAttribute="width" id="1Iu-jp-28s"/>
+                                    <constraint firstAttribute="trailing" secondItem="5HT-Up-YAd" secondAttribute="trailing" id="6OW-Kw-W3b"/>
                                     <constraint firstItem="5HT-Up-YAd" firstAttribute="leading" secondItem="WJx-Xb-9af" secondAttribute="leading" id="B0V-v5-hdB"/>
-                                    <constraint firstAttribute="height" secondItem="5HT-Up-YAd" secondAttribute="height" id="DgM-v8-nGA"/>
-                                    <constraint firstAttribute="bottom" secondItem="kfG-Fe-ode" secondAttribute="bottom" constant="15" id="K5F-Ue-1ED"/>
+                                    <constraint firstAttribute="bottom" secondItem="kfG-Fe-ode" secondAttribute="bottom" constant="5" id="K5F-Ue-1ED"/>
+                                    <constraint firstAttribute="bottom" secondItem="5HT-Up-YAd" secondAttribute="bottom" id="iWt-0N-ePd"/>
                                     <constraint firstItem="5HT-Up-YAd" firstAttribute="top" secondItem="WJx-Xb-9af" secondAttribute="top" id="n0c-VL-2ue"/>
                                     <constraint firstAttribute="centerX" secondItem="kfG-Fe-ode" secondAttribute="centerX" id="ynw-y8-yAH"/>
                                 </constraints>
